middle button fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -155,7 +155,8 @@ main {
                 border-radius: .25rem;
                 width: 100%;
                 padding: .5rem;
-                color: hsl(237, 73%, 64%);
+                // color: hsl(237, 73%, 64%);
+                color: #575EE5;
                 font-family: inherit;
                 background: $very-light-grayish-blue;
                 cursor: pointer;
